hopefully fixed dark mode for safari

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -500,11 +500,3 @@ footer ul {
     opacity: 0;
   }
 }
-
-@media (prefers-color-scheme: dark) {
-  @import "dark";
-}
-
-.dark {
-  @import "dark";
-}
